<resources>
    <string name="app_name">chatuidemo</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="save">保存</string>
    <string name="required">必填</string>
    <string name="submit">提交</string>
    <string name="em_main_title_home">会话</string>
    <string name="em_main_title_friends">通讯录</string>
    <string name="em_main_title_discover">发现</string>
    <string name="em_main_title_me">我</string>
    <string name="em_dialog_default_title">提示</string>
    <string name="main_home">首页</string>
    <string name="main_friend">联系人</string>
    <string name="main_set">设置</string>
    <string name="em_login_name_hint">用户名</string>
    <string name="em_login_password_hint">密码</string>
    <string name="em_login_token_hint">token</string>
    <string name="em_login_btn">登\u0020录</string>
    <string name="em_login_tv_register">账号注册</string>
    <string name="em_login_tv_token">token登录</string>
    <string name="em_login_tv_pwd">密码登录</string>
    <string name="em_login_tv_server_set">服务器配置</string>
    <string name="em_login_btn_info_incomplete">用户名或者密码不能为空</string>
    <string name="em_login_failed">登录失败</string>
    <string name="em_login_agreement">同意 服务条款 与 隐私协议</string>
    <string name="em_register_btn">注\u0020册</string>
    <string name="em_register_password_confirm_hint">确认密码</string>
    <string name="em_register_failed">注册失败</string>
    <string name="em_register_success">注册成功</string>
    <string name="em_password_confirm_error">两次输入的密码不一致，请重新输入!</string>
    <string name="em_error_network_error">当前网络不可用</string>
    <string name="em_error_not_login">未登录过环信</string>
    <string name="em_error_parse_error">解析错误</string>
    <string name="em_error_err_unknown">网络问题请稍后重试</string>
    <string name="em_err_image_android_min_version">上传图片只支持4.4版本以上</string>
    <string name="em_err_file_not_exist">文件不存在</string>
    <string name="em_add_self_error">不能添加自己</string>
    <string name="em_friend_error">此用户已是你的好友</string>
    <string name="em_friend_black_error">此用户已是你好友(被拉黑状态)，从黑名单列表中移出即可</string>
    <string name="em_delete_conversation_error">删除失败或不存在该对话</string>
    <string name="em_delete_sys_msg_error">删除失败或不存在该消息</string>
    <string name="em_error_group_no_members">没有群组成员</string>
    <string name="em_server_set_title">使用自定义服务器？</string>
    <string name="em_server_set_server_hint">demo已经绑定以下环境设置，如果需要修改，请重启App进行设置。</string>
    <string name="em_server_set_appkey">Appkey</string>
    <string name="em_server_set_apns_cert_name">apns证书名称</string>
    <string name="em_server_set_specify_server">使用私有服务器:</string>
    <string name="em_server_set_server_address">IM服务器地址</string>
    <string name="em_server_set_server_port">端口号</string>
    <string name="em_server_set_rest_server_address">REST服务器地址</string>
    <string name="em_server_set_https_set">只使用Https:</string>
    <string name="em_server_set_button_reset_text">重置服务器设置</string>
    <string name="em_server_set_dialog_reset">是否恢复默认服务器设置？</string>
    <string name="em_server_set_button_text">保\u0020存\u0020配\u0020置</string>
    <string name="em_server_set_appkey_empty_hint">请设置Appkey</string>
    <string name="em_server_set_im_server_empty_hint">请设置IM服务器地址</string>
    <string name="em_server_set_im_port_empty_hint">请设置IM端口号</string>
    <string name="em_server_set_rest_server_empty_hint">请设置REST服务器地址</string>
    <string name="em_empty_layout_content">寻找自我 保持本色</string>
    <string name="were_mentioned">[有人@我]</string>
    <string name="em_search_text_hint">搜索</string>
    <string name="em_conversation_menu_video">音视频会议</string>
    <string name="em_conversation_menu_group">创建群组</string>
    <string name="em_conversation_menu_friend">添加好友</string>
    <string name="em_conversation_menu_scan">扫一扫</string>
    <string name="em_conversation_menu_make_top">置顶</string>
    <string name="em_conversation_menu_cancel_top">取消置顶</string>
    <string name="em_conversation_menu_delete">删除会话</string>
    <string name="em_conversation_system_notification">系统通知</string>
    <string name="em_add_contact_item_button_text">添加</string>
    <string name="em_add_contact_not_add_myself">不能添加自己</string>
    <string name="em_add_contact_user_already_in_contactlist">此用户已是你好友(被拉黑状态)，从黑名单列表中移出即可</string>
    <string name="em_add_contact_this_user_is_already_your_friend">此用户已是你的好友</string>
    <string name="em_add_contact_add_a_friend">加个好友呗</string>
    <string name="em_add_contact_send_successful">发送请求成功,等待对方验证</string>
    <string name="em_friends_new_chat">新的好友</string>
    <string name="em_friends_group_chat">群聊</string>
    <string name="em_friends_label">标签</string>
    <string name="em_friends_chat_room">聊天室</string>
    <string name="em_friends_official_account">公众号</string>
    <string name="em_friends_av_conference">音视频会议</string>
    <string name="em_friends_delete_the_contact">删除联系人</string>
    <string name="em_friends_move_into_the_blacklist_new">移入到黑名单</string>
    <string name="em_friends_move_out_the_blacklist_new">移出黑名单</string>
    <string name="em_friends_delete_contact_hint">是否删除联系人？</string>
    <string name="em_friends_detail_note">设置备注</string>
    <string name="em_friends_detail_chat">发起聊天</string>
    <string name="em_friends_detail_voice">语音通话</string>
    <string name="em_friends_detail_video">视频聊天</string>
    <string name="em_friends_detail_add_contact">添加到通讯录</string>
    <string name="em_friends_detail_add_black">加入黑名单</string>
    <string name="em_friends_group_contact_manage">我管理的</string>
    <string name="em_friends_group_contact_participate">我参与的</string>
    <string name="em_friends_group_contact_title">群组列表</string>
    <string name="em_friends_chat_room_contact_title">聊天室列表</string>
    <string name="em_friends_chat_room_create">创建聊天室</string>
    <string name="em_chat_pick_user_title">选择联系人</string>
    <string name="em_single_set_title">聊天信息</string>
    <string name="em_single_search_history">查找聊天记录</string>
    <string name="em_single_clear_history">清空聊天记录</string>
    <string name="em_single_conversation_top">会话置顶</string>
    <string name="em_chat_delete_conversation">是否删除会话？</string>
    <string name="em_chat_group_detail_title">群组信息</string>
    <string name="em_chat_group_detail_group_member">群成员</string>
    <string name="em_chat_group_detail_member_num">%1$d人</string>
    <string name="em_chat_group_detail_name">群名称</string>
    <string name="em_chat_group_detail_share_file">共享文件</string>
    <string name="em_chat_group_detail_announcement">群公告</string>
    <string name="em_chat_group_detail_announcement_hint">请输入群公告</string>
    <string name="em_chat_group_detail_history">查找聊天记录</string>
    <string name="em_chat_group_detail_introduction">群介绍</string>
    <string name="em_chat_group_detail_introduction_hint">请输入群介绍</string>
    <string name="em_chat_group_detail_not_disturb">消息免打扰</string>
    <string name="em_chat_group_detail_off_push">屏蔽离线消息推送</string>
    <string name="em_chat_group_detail_top">会话置顶</string>
    <string name="em_chat_group_detail_refund">退出群组</string>
    <string name="em_chat_group_detail_dissolve">解散群组</string>
    <string name="em_chat_group_save">保存</string>
    <string name="em_chat_group_shared_files_upload">上传</string>
    <string name="em_chat_group_invite_group_member">邀请成员</string>
    <string name="em_chat_group_select_contact">选择联系人</string>
    <string name="em_chat_group_select_contact_save">保存</string>
    <string name="em_group_member_type_title">群成员</string>
    <string name="em_group_member_type_admin">群管理员</string>
    <string name="em_group_member_type_member">群成员</string>
    <string name="em_group_member_type_member_num">共%1$d人</string>
    <string name="em_group_new_title">创建群组</string>
    <string name="em_group_new_save">完成</string>
    <string name="em_group_new_name">名称</string>
    <string name="em_group_new_name_hint">请输入群组名称</string>
    <string name="em_group_new_profile">简介</string>
    <string name="em_group_new_profile_hint">请输入群组简介</string>
    <string name="em_group_max_users">群组人数</string>
    <string name="em_group_set_max_users">设置群组最大人数</string>
    <string name="em_group_members">群组成员</string>
    <string name="em_group_new_if_public">是否公开群组</string>
    <string name="em_group_new_if_public_hint">其他用户不能查找到此群</string>
    <string name="em_group_new_open_invite">群成员是否有邀请权限</string>
    <string name="em_group_new_open_invite_hint">只允许群主邀请用户进群</string>
    <string name="em_group_new_need_owner_approval">入群需要群主同意</string>
    <string name="em_group_new_name_cannot_be_empty">群组名称不能为空</string>
    <string name="em_group_new_invite_join_group">%1$s邀请加入群：%2$s</string>
    <string name="em_authority_menu_add_admin">设为管理员</string>
    <string name="em_authority_menu_remove_admin">移除管理员权限</string>
    <string name="em_authority_menu_transfer_owner">移交群主权限</string>
    <string name="em_authority_menu_remove_member">删除成员</string>
    <string name="em_authority_menu_add_black">添加到黑名单</string>
    <string name="em_authority_menu_remove_black">从黑名单移除</string>
    <string name="em_authority_menu_mute">禁言</string>
    <string name="em_authority_menu_unmute">移除禁言</string>
    <string name="em_authority_menu_admin_list">管理员列表</string>
    <string name="em_authority_menu_member_list">成员列表</string>
    <string name="em_authority_menu_mute_list">禁言列表</string>
    <string name="em_authority_menu_black_list">黑名单列表</string>
    <string name="em_authority_menu_add_contact">邀请群成员</string>
    <string name="em_authority_remove_group">是否将该成员移除群组？</string>
    <string name="em_chat_room_detail_title">聊天室信息</string>
    <string name="em_chat_room_detail_id">聊天室ID</string>
    <string name="em_chat_room_detail_room_name">名称</string>
    <string name="em_chat_room_detail_description">描述</string>
    <string name="em_chat_room_detail_owner">创建者</string>
    <string name="em_chat_room_detail_members">聊天室成员</string>
    <string name="em_chat_room_detail_admins">管理员</string>
    <string name="em_chat_room_detail_out">退出聊天室</string>
    <string name="em_chat_room_detail_destroy">解散聊天室</string>
    <string name="em_chat_room_detail_destroy_info">是否解散聊天室？</string>
    <string name="em_chat_room_new_title">创建聊天室</string>
    <string name="em_chat_room_new_save">保存</string>
    <string name="em_chat_room_new_name_hint">聊天室名称</string>
    <string name="em_chat_room_new_profile_hint">聊天室简介</string>
    <string name="em_notify_agree">同意</string>
    <string name="em_notify_refuse">拒绝</string>
    <string name="em_notify_delete">删除</string>
    <string name="em_about_me_developer">开发者服务</string>
    <string name="em_set_common_set">通用</string>
    <string name="em_about_me_service_set">服务诊断</string>
    <string name="em_developer_version">当前版本</string>
    <string name="em_developer_appkey_self">自定义AppKey</string>
    <string name="em_developer_allow_token">允许使用token登录</string>
    <string name="em_developer_from_server">优先从服务器获取消息</string>
    <string name="em_developer_upload_to_hx">消息附件上传到环信服务器</string>
    <string name="em_developer_upload_to_hx_notice">上传附件到环信服务器，关闭需自定义文件上传</string>
    <string name="em_developer_msg_sort">消息排序</string>
    <string name="em_developer_msg_sort_receive">按接收顺序</string>
    <string name="em_developer_service_result_unfinished">未完成</string>
    <string name="push_settings">消息推送设置</string>
    <string name="yangshengqi">使用扬声器播放语音</string>
    <string name="call_option">通话设置</string>
    <string name="title_msg_typing">显示输入状态</string>
    <string name="chatroom_allow_owner_leave"> 允许聊天室群主离开</string>
    <string name="delete_msg_when_exit_group">退出群组时删除聊天数据</string>
    <string name="set_transfer_file_by_userself">无需用户实现上传下载</string>
    <string name="set_autodownload_thumbnail">自动下载图片缩略图</string>
    <string name="auto_accept_group_invitation">自动同意群组加群邀请</string>
    <string name="copy">复制</string>
    <string name="forward">转发</string>
    <string name="recall">撤回</string>
    <string name="delete">删除</string>
</resources>