<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.hyphenate.easeui.widget.EaseTitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/em_common_title_bar_height"
        app:titleBarTitle="@string/em_about_me_developer"
        app:titleBarDisplayHomeAsUpEnabled="true"/>

    <com.hyphenate.chatuidemo.common.widget.ArrowItemView
        android:id="@+id/item_version"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_about_hx"
        app:arrowItemTitle="@string/em_developer_version"
        app:arrowItemShowArrow="false"
        android:background="@color/white"
        android:foreground="@drawable/demo_ripple_click_gray"/>

    <com.hyphenate.chatuidemo.common.widget.ArrowItemView
        android:id="@+id/item_appkey"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_about_hx"
        app:arrowItemTitle="@string/em_developer_appkey_self"
        android:background="@color/white"
        android:foreground="@drawable/demo_ripple_click_gray"/>

    <com.hyphenate.chatuidemo.common.widget.SwitchItemView
        android:id="@+id/item_switch_token_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:switchItemTitle="@string/em_developer_allow_token"
        app:switchItemShowDivider="true"/>

    <com.hyphenate.chatuidemo.common.widget.SwitchItemView
        android:id="@+id/item_switch_msg_from_server"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:switchItemTitle="@string/em_developer_from_server"
        app:switchItemShowDivider="true"/>

    <com.hyphenate.chatuidemo.common.widget.SwitchItemView
        android:id="@+id/item_switch_upload_to_hx"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:switchItemTitle="@string/em_developer_upload_to_hx"
        app:switchItemShowDivider="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:padding="10dp"
        android:textSize="12sp"
        android:text="@string/em_developer_upload_to_hx_notice"/>

    <com.hyphenate.chatuidemo.common.widget.SwitchItemView
        android:id="@+id/item_switch_auto_download_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:switchItemTitle="@string/set_autodownload_thumbnail"
        app:switchItemShowDivider="true"/>

    <com.hyphenate.chatuidemo.common.widget.ArrowItemView
        android:id="@+id/item_msg_sort"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_about_hx"
        app:arrowItemTitle="@string/em_developer_msg_sort"
        app:arrowItemContent="@string/em_developer_msg_sort_receive"
        android:background="@color/white"
        android:foreground="@drawable/demo_ripple_click_gray"/>


    <com.hyphenate.chatuidemo.common.widget.ArrowItemView
        android:id="@+id/item_msg_service_diagnose"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_about_hx"
        app:arrowItemTitle="@string/em_about_me_service_set"
        app:arrowItemContent="@string/em_developer_service_result_unfinished"
        android:background="@color/white"
        android:foreground="@drawable/demo_ripple_click_gray"/>


</LinearLayout>