<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_video"
        android:icon="@drawable/em_conversation_menu_video"
        android:orderInCategory="100"
        android:title="@string/em_conversation_menu_video"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_group"
        android:icon="@drawable/em_conversation_menu_group"
        android:orderInCategory="100"
        android:title="@string/em_conversation_menu_group"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_friend"
        android:icon="@drawable/em_conversation_friend"
        android:orderInCategory="100"
        android:title="@string/em_conversation_menu_friend"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/em_conversation_menu_scan"
        android:orderInCategory="100"
        android:title="@string/em_conversation_menu_scan"
        app:showAsAction="never"
        android:visible="false"/>

</menu>