<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/em_main_nav_home">

    <fragment
        android:id="@+id/em_main_nav_home"
        android:name="com.hyphenate.chatuidemo.section.conversation.HomeFragment"
        android:label="@string/em_main_title_home"
        tools:layout="@layout/em_fragment_home" />

    <fragment
        android:id="@+id/em_main_nav_friends"
        android:name="com.hyphenate.chatuidemo.section.friends.FriendsFragment"
        android:label="@string/em_main_title_friends"
        tools:layout="@layout/em_fragment_friends" />

    <fragment
        android:id="@+id/em_main_nav_discover"
        android:name="com.hyphenate.chatuidemo.section.discover.DiscoverFragment"
        android:label="@string/em_main_title_discover"
        tools:layout="@layout/em_fragment_discover" />

    <fragment
        android:id="@+id/em_main_nav_me"
        android:name="com.hyphenate.chatuidemo.section.me.AboutMeFragment"
        android:label="@string/em_main_title_me"
        tools:layout="@layout/em_fragment_about_me" />
</navigation>