<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_invite_agree"
        android:orderInCategory="100"
        android:visible="false"
        android:title="@string/em_notify_agree"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_invite_refuse"
        android:orderInCategory="100"
        android:visible="false"
        android:title="@string/em_notify_refuse"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_invite_delete"
        android:orderInCategory="100"
        android:visible="true"
        android:title="@string/em_notify_delete"
        app:showAsAction="ifRoom"/>

</menu>