<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.hyphenate.easeui.widget.EaseTitleBar
        android:id="@+id/title_bar"
        android:layout_width="0dp"
        android:layout_height="@dimen/em_common_title_bar_height"
        app:titleBarTitle="@string/em_group_new_title"
        app:titleBarDisplayHomeAsUpEnabled="true"
        app:titleBarRightTitle="@string/em_group_new_save"
        app:titleBarRightVisible="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/white"/>
    
    <com.hyphenate.easeim.common.widget.ArrowItemView
        android:id="@+id/item_group_name"
        android:layout_width="0dp"
        android:layout_height="@dimen/em_common_item_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_bar"
        app:arrowItemTitle="@string/em_group_new_name"
        android:background="@color/white"/>

    <com.hyphenate.easeim.common.widget.ArrowItemView
        android:id="@+id/item_group_profile"
        android:layout_width="0dp"
        android:layout_height="@dimen/em_common_item_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_group_name"
        app:arrowItemTitle="@string/em_group_new_profile"
        android:background="@color/white"/>

    <com.hyphenate.easeim.common.widget.ArrowItemView
        android:id="@+id/item_group_max_users"
        android:layout_width="0dp"
        android:layout_height="@dimen/em_common_item_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_group_profile"
        app:arrowItemTitle="@string/em_group_max_users"
        android:background="@color/white"/>

    <com.hyphenate.easeim.common.widget.SwitchItemView
        android:id="@+id/item_switch_public"
        android:layout_width="0dp"
        android:layout_height="@dimen/em_common_item_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_group_max_users"
        android:layout_marginTop="@dimen/em_margin_15"
        app:switchItemTitle="@string/em_group_new_if_public"
        app:switchItemHint="@string/em_group_new_if_public_uncheck_hint"
        android:background="@color/white"/>

    <com.hyphenate.easeim.common.widget.SwitchItemView
        android:id="@+id/item_switch_invite"
        android:layout_width="0dp"
        android:layout_height="@dimen/em_common_item_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_switch_public"
        app:switchItemTitle="@string/em_group_new_open_invite"
        app:switchItemHint="@string/em_group_new_open_invite_uncheck_hint"
        android:background="@color/white"/>


    <com.hyphenate.easeim.common.widget.ArrowItemView
        android:id="@+id/item_group_members"
        android:layout_width="0dp"
        android:layout_height="@dimen/em_common_item_height"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_switch_invite"
        android:layout_marginTop="@dimen/em_margin_15"
        app:arrowItemTitle="@string/em_group_members"
        android:background="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>